# codex-document-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  doc-service.compose.yaml  pyproject.toml  server.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
drm_document_service/: app.py  config.py  deps.py  error_handlers.py  exceptions.py  logger.py  schemas.py
drm_document_service/agents/: guardrail_agent.py  openai_model.py  orchestrator_agent.py  pipeline.py  retrieval_agent.py  template_manager.py
drm_document_service/agents/queries/: guardrail_system_prompt.j2  orchestrator_system_prompt.j2  retrieval_system_prompt.j2  safeguard.j2
drm_document_service/api/: __init__.py  file.py  query.py  upload.py
drm_document_service/logic/: embeddings_service.py  pdf_parser_service.py
drm_document_service/storage/: document_repository.py  embeddings_repository.py  minio_client.py  qdrant_client.py
tests/: conftest.py  test_pipeline.py
tests/api/: conftest.py  test_app.py  test_file.py  test_query.py  test_upload.py
tests/logic/: test_embeddings_service.py  test_pdf_parser_service.py
tests/storage/: test_document_repository.py  test_minio_client.py  test_qdrant_client.py
